@@ -3,6 +3,7 @@ Unreleased (in Git)
 - QC::Worker#handle_failure logs the job and the error
 - QC.default_queue= to set your own default queue. (can be used
   in testing to configure a mock queue)
+- QC.log now reports time elapsed in milliseconds.
 
 Version 2.1.4
 - update pg dependency to 0.15.1
